# python-auth-flow

./: README.md  pyproject.toml
riot_auth/: auth.py  cli.py
