[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "riot-auth"
version = "0.1.1"
description = "A library to get various Riot tokens and get around Cloudflare's filter during auth."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.6"
dependencies = ["aiohttp>=3.7.0", "typer"] 

[project.scripts]
riot-auth = "riot_auth.cli:app" 
